fix hero-bg css position making it invisible

--- a/wp-content/themes/gastronome/assets/css/src/main.scss
+++ b/wp-content/themes/gastronome/assets/css/src/main.scss
@@ -29,6 +29,5 @@ $font-family-sans-serif: 'Helvetica Now Display', -apple-system, system-ui, Blin
 @import 'sections/temoignages';
 
 body {
-  background: url("/wp-content/themes/gastronome/assets/img/hero-bg.png") center/cover no-repeat;
-
+  background: url("/wp-content/themes/gastronome/assets/img/hero-bg.png") top/contain no-repeat;
 }
